--- a/index.html
+++ b/index.html
@@ -40,12 +40,28 @@
   <img src="https://i.ibb.co/TDyfbTRj/Imagen-de-Whats-App-2025-07-31-a-las-16-16-24-2e57004c.jpg" alt="Lino Sastrero" class="active" />
   <img src="https://i.ibb.co/vKF1pWp/Imagen-de-Whats-App-2025-07-31-a-las-16-19-13-89971266.jpg" alt="Morley Suede" />
   <img src="https://i.ibb.co/4w6cq18g/Imagen-de-Whats-App-2025-07-31-a-las-16-16-09-bbcf0581.jpg" alt="Wafle" />
-
-  <!-- Indicadores para cada imagen -->
+  <img src="https://i.ibb.co/DfhDPmJc/Imagen-de-Whats-App-2025-08-18-a-las-14-47-50-fa6e8edf.jpg" alt="Barbie Sastrero" />
+<img src="https://i.ibb.co/5xkCN3W5/Imagen-de-Whats-App-2025-08-18-a-las-14-49-51-cdd62794.jpg" alt="Rústico" />
+<img src="https://i.ibb.co/dJsW5BRz/Imagen-de-Whats-App-2025-08-18-a-las-14-55-04-2cf3b956.jpg" alt="Morley KLM" />
+<img src="https://i.ibb.co/B5zHDNZ2/Imagen-de-Whats-App-2025-08-18-a-las-14-55-05-0b0eeeeb.jpg" alt="Viscosa Airflow" />
+<img src="https://i.ibb.co/FkLfY9hq/Imagen-de-Whats-App-2025-08-18-a-las-14-56-35-c675c03e.jpg" alt="Lino Cuadrille" />
+<img src="https://i.ibb.co/2YYxq16w/Imagen-de-Whats-App-2025-08-18-a-las-14-59-05-ece8b75a.jpg" alt="Cuerina" />
+<img src="https://i.ibb.co/xtX6tZxp/Imagen-de-Whats-App-2025-08-18-a-las-15-08-12-702450fc.jpg" alt="Lino Jaspeado" />
+<img src="https://i.ibb.co/cXyT1nbf/Imagen-de-Whats-App-2025-08-18-a-las-15-08-55-4c04f603.jpg" alt="Twil Lolis" />
+  
+<!-- Indicadores para cada imagen -->
   <div class="indicators" style="text-align:center; margin-top: 10px;">
-    <span class="indicator active" onclick="currentSlide(1)"></span>
+ <span class="indicator active" onclick="currentSlide(1)"></span>
     <span class="indicator" onclick="currentSlide(2)"></span>
     <span class="indicator" onclick="currentSlide(3)"></span>
+    <span class="indicator" onclick="currentSlide(4)"></span>
+     <span class="indicator" onclick="currentSlide(5)"></span>
+     <span class="indicator" onclick="currentSlide(6)"></span>
+     <span class="indicator" onclick="currentSlide(7)"></span>
+    <span class="indicator" onclick="currentSlide(8)"></span>
+      <span class="indicator" onclick="currentSlide(9)"></span>
+     <span class="indicator" onclick="currentSlide(10)"></span>
+      <span class="indicator" onclick="currentSlide(11)"></span>
   </div>
 
   <!-- Flechas para navegación -->
@@ -87,7 +103,7 @@
   </ul>
 </div>
 
-      <!-- Lino Sastrero -->
+    <!-- Lino Sastrero -->
       <article class="fabric-card">
         <div class="fabric-slider">
           <img src="https://i.ibb.co/TDyfbTRj/Imagen-de-Whats-App-2025-07-31-a-las-16-16-24-2e57004c.jpg" alt="Lino Sastrero" class="slider-img active" />
@@ -127,18 +143,20 @@
         <button class="contact-btn" data-name="Wafle">Consultar</button>
       </article>
 
-      <!-- Lino Rayado -->
-      <article class="fabric-card">
-        <div class="fabric-slider">
-          <img src="https://i.ibb.co/MyDJXZhm/Imagen-de-Whats-App-2025-07-31-a-las-16-16-56-7421441d.jpg" alt="Lino Rayado" class="slider-img active" />
-          <img src="https://i.ibb.co/5WJMVBnV/Imagen-de-Whats-App-2025-07-31-a-las-17-42-30-30329274.jpg" alt="Lino Rayado 2" class="slider-img" />
-        </div>
-        <h4 class="fabric-name">Lino Rayado</h4>
-        <p class="fabric-description">
-          Lino liviano con diseño a rayas, ideal para camisas, vestidos y pantalones frescos. Su estilo clásico y natural lo convierte en un must de temporada.
-        </p>
-        <button class="contact-btn" data-name="Lino Rayado">Consultar</button>
-      </article>
+     <!-- Lino Rayado -->
+<article class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/MyDJXZhm/Imagen-de-Whats-App-2025-07-31-a-las-16-16-56-7421441d.jpg" alt="Lino Rayado" class="slider-img active" />
+    <img src="https://i.ibb.co/5WJMVBnV/Imagen-de-Whats-App-2025-07-31-a-las-17-42-30-30329274.jpg" alt="Lino Rayado 2" class="slider-img" />
+    <img src="https://i.ibb.co/bgGmGCb7/Imagen-de-Whats-App-2025-08-18-a-las-14-55-57-f62387a8.jpg" alt="Lino Rayado 3" class="slider-img" />
+  </div>
+  <h4 class="fabric-name">Lino Rayado</h4>
+  <p class="fabric-description">
+    Lino liviano con diseño a rayas, ideal para camisas, vestidos y pantalones frescos. Su estilo clásico y natural lo convierte en un must de temporada.
+  </p>
+  <button class="contact-btn" data-name="Lino Rayado">Consultar</button>
+</article>
+
 
       <!-- Cey -->
       <article class="fabric-card">
@@ -152,9 +170,104 @@
         </p>
         <button class="contact-btn" data-name="Cey">Consultar</button>
       </article>
-
-    </section>
+      
+<!-- Barbie Sastrero -->
+<div id="barbie-sastrero" class="fabric-card">
+  <div class="fabric-slider">
+    <img class="slider-img active" src="https://i.ibb.co/DfhDPmJc/Imagen-de-Whats-App-2025-08-18-a-las-14-47-50-fa6e8edf.jpg" alt="Barbie Sastrero 1">
   </div>
+  <div class="fabric-name">Barbie Sastrero</div>
+  <div class="fabric-description">
+    Tela con cuerpo y caída elegante, ideal para sastrería moderna y prendas estructuradas con un acabado sofisticado.
+  </div>
+  <a href="#" class="contact-btn" data-name="Barbie Sastrero">Consultar</a>
+</div>
+
+<!-- Rústico -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/5xkCN3W5/Imagen-de-Whats-App-2025-08-18-a-las-14-49-51-cdd62794.jpg" alt="Rústico" class="slider-img active" />
+  </div>
+  <div class="fabric-name">Rústico</div>
+  <div class="fabric-description">
+    Tela resistente y con textura marcada, ideal para prendas informales, cómodas y con estilo natural.
+  </div>
+  <a href="#" class="contact-btn" data-name="Rústico">Consultar</a>
+</div>
+
+<!-- Morley KLM -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/dJsW5BRz/Imagen-de-Whats-App-2025-08-18-a-las-14-55-04-2cf3b956.jpg" alt="Morley KLM" class="slider-img active" />
+  </div>
+  <div class="fabric-name">Morley KLM</div>
+  <div class="fabric-description">
+    Tela suave con textura tipo morley y acabado elegante, ideal para prendas modernas, cómodas y con caída impecable.
+  </div>
+  <a href="#" class="contact-btn" data-name="Morley KLM">Consultar</a>
+</div>
+
+<!-- Viscosa Airflow -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/B5zHDNZ2/Imagen-de-Whats-App-2025-08-18-a-las-14-55-05-0b0eeeeb.jpg" alt="Viscosa Airflow" class="slider-img active" />
+  </div>
+  <div class="fabric-name">Viscosa Airflow</div>
+  <div class="fabric-description">
+    Tela ligera y fluida, ideal para prendas frescas y cómodas. Perfecta para vestidos, blusas y camisas con caída natural y elegante.
+  </div>
+  <a href="#" class="contact-btn" data-name="Viscosa Airflow">Consultar</a>
+</div>
+
+<!-- Lino Cuadrille -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/FkLfY9hq/Imagen-de-Whats-App-2025-08-18-a-las-14-56-35-c675c03e.jpg" alt="Lino Cuadrille" class="slider-img active" />
+  </div>
+  <div class="fabric-name">Lino Cuadrille</div>
+  <div class="fabric-description">
+    Lino con diseño cuadriculado, fresco y elegante, ideal para prendas de verano con estilo clásico y sofisticado.
+  </div>
+  <a href="#" class="contact-btn" data-name="Lino Cuadrille">Consultar</a>
+</div>
+
+<!-- Cuerina -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/2YYxq16w/Imagen-de-Whats-App-2025-08-18-a-las-14-59-05-ece8b75a.jpg" alt="Cuerina" class="slider-img active" />
+  </div>
+  <div class="fabric-name">Cuerina</div>
+  <div class="fabric-description">
+    Cuerina suave y resistente, ideal para confeccionar chaquetas, accesorios y detalles de moda con estilo urbano y moderno.
+  </div>
+  <a href="#" class="contact-btn" data-name="Cuerina">Consultar</a>
+</div>
+
+<!-- Lino Jaspeado -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/xtX6tZxp/Imagen-de-Whats-App-2025-08-18-a-las-15-08-12-702450fc.jpg" alt="Lino Jaspeado" class="slider-img active" />
+  </div>
+  <div class="fabric-name">Lino Jaspeado</div>
+  <div class="fabric-description">
+    Lino jaspeado con textura ligera y sofisticada, perfecto para camisas, vestidos y pantalones frescos de estilo elegante y natural.
+  </div>
+  <a href="#" class="contact-btn" data-name="Lino Jaspeado">Consultar</a>
+</div>
+
+<!-- Twil Lolis -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/cXyT1nbf/Imagen-de-Whats-App-2025-08-18-a-las-15-08-55-4c04f603.jpg" alt="Twil Lolis" class="slider-img active" />
+  </div>
+  <div class="fabric-name">Twil Lolis</div>
+  <div class="fabric-description">
+    Twil suave y ligero con caída elegante, ideal para blusas, vestidos y prendas cómodas con un toque sofisticado.
+  </div>
+  <a href="#" class="contact-btn" data-name="Twil Lolis">Consultar</a>
+</div>
+
+      </div>
 
   <!-- Modal para ampliar imágenes -->
   <div id="imageModal" class="modal">
