Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   <div class="fabric-slider">
     <img src="https://i.ibb.co/5xkCN3W5/Imagen-de-Whats-App-2025-08-18-a-las-14-49-51-cdd62794.jpg" alt="Rústico" class="slider-img active" />
   </div>
-  <div class="fabric-name">Rústico</div>
+  <div class="fabric-name">Rustico</div>
   <div class="fabric-description">
     Tela resistente y con textura marcada, ideal para prendas informales, cómodas y con estilo natural.
   </div>
