Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
 <!-- Rústico -->
 <div class="fabric-card">
   <div class="fabric-slider">
-    <img src="https://i.ibb.co/5xkCN3W5/Imagen-de-Whats-App-2025-08-18-a-las-14-49-51-cdd62794.jpg" alt="Rústico" class="slider-img active" />
+    <img src="https://i.ibb.co/5xkCN3W5/Imagen-de-Whats-App-2025-08-18-a-las-14-49-51-cdd62794.jpg" alt="Rustico" class="slider-img active" />
   </div>
   <div class="fabric-name">Rustico</div>
   <div class="fabric-description">
     Tela resistente y con textura marcada, ideal para prendas informales, cómodas y con estilo natural.
   </div>
-  <a href="#" class="contact-btn" data-name="Rústico">Consultar</a>
+  <a href="#" class="contact-btn" data-name="Rustico">Consultar</a>
 </div>
 
 <!-- Morley KLM -->
