--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 <div id="barbie-sastrero" class="fabric-card">
   <div class="fabric-slider">
     <img class="slider-img active" src="https://i.ibb.co/DfhDPmJc/Imagen-de-Whats-App-2025-08-18-a-las-14-47-50-fa6e8edf.jpg" alt="Barbie Sastrero 1">
+    <img class="slider-img" src="https://i.ibb.co/nM37rwG0/Imagen-de-Whats-App-2025-08-18-a-las-19-04-44-83d12cb4.jpg" alt="Barbie Sastrero 2">
   </div>
   <div class="fabric-name">Barbie Sastrero</div>
   <div class="fabric-description">
@@ -182,6 +183,7 @@
   </div>
   <a href="#" class="contact-btn" data-name="Barbie Sastrero">Consultar</a>
 </div>
+
 
 <!-- Rústico -->
 <div class="fabric-card">
