--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
   </div>
 
   <footer style="text-align: center; padding: 20px; background-color: #123844; font-size: 14px; color: #d0cfe8;">
-    <p>© 2025 Marcos Duek – Catálogo de Telas</p>
+    <p>© 2025 Factory – Catálogo de Telas</p>
     <p>Todos los derechos reservados | Calidad que se siente, estilo que perdura</p>
     <p>Web creada por <strong>Uziel Romano</strong></p>
     <a href="https://wa.me/541134223812" target="_blank" style="color: #d0cfe8; text-decoration: none;">
