--- a/index.html
+++ b/index.html
@@ -103,19 +103,21 @@
   </ul>
 </div>
 
-    <!-- Lino Sastrero -->
-      <article class="fabric-card">
-        <div class="fabric-slider">
-          <img src="https://i.ibb.co/TDyfbTRj/Imagen-de-Whats-App-2025-07-31-a-las-16-16-24-2e57004c.jpg" alt="Lino Sastrero" class="slider-img active" />
-          <img src="https://i.ibb.co/WvM7s4LG/file-0000000006d461fd8ba167a71358d1e9.png" alt="Lino Sastrero 2" class="slider-img" />
-          <img src="https://i.ibb.co/prjy8ng5/file-0000000014f8622f88ede3c198f240fc.png" alt="Lino Sastrero 3" class="slider-img" />
-        </div>
-        <h4 class="fabric-name">Lino Sastrero</h4>
-        <p class="fabric-description">
-          Elegante y fresco, el lino sastrero combina la naturalidad del lino con la estructura ideal para prendas formales de verano. Ideal para trajes livianos, blazers y pantalones con caída impecable.
-        </p>
-        <button class="contact-btn" data-name="Lino Sastrero">Consultar</button>
-      </article>
+       <!-- Lino Sastrero -->
+<article class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/TDyfbTRj/Imagen-de-Whats-App-2025-07-31-a-las-16-16-24-2e57004c.jpg" alt="Lino Sastrero" class="slider-img active" />
+    <img src="https://i.ibb.co/WvM7s4LG/file-0000000006d461fd8ba167a71358d1e9.png" alt="Lino Sastrero 2" class="slider-img" />
+    <img src="https://i.ibb.co/prjy8ng5/file-0000000014f8622f88ede3c198f240fc.png" alt="Lino Sastrero 3" class="slider-img" />
+    <img src="https://i.ibb.co/DH77cjcV/Imagen-de-Whats-App-2025-08-28-a-las-16-33-12-5004c258.jpg" alt="Lino Sastrero 4" class="slider-img" />
+  </div>
+  <h4 class="fabric-name">Lino Sastrero</h4>
+  <p class="fabric-description">
+    Elegante y fresco, el lino sastrero combina la naturalidad del lino con la estructura ideal para prendas formales de verano. Ideal para trajes livianos, blazers y pantalones con caída impecable.
+  </p>
+  <button class="contact-btn" data-name="Lino Sastrero">Consultar</button>
+</article>
+
 
       <!-- Morley Suede -->
       <article class="fabric-card">
@@ -130,25 +132,28 @@
         <button class="contact-btn" data-name="Morley Suede">Consultar</button>
       </article>
 
-      <!-- Wafle -->
-      <article class="fabric-card">
-        <div class="fabric-slider">
-          <img src="https://i.ibb.co/4w6cq18g/Imagen-de-Whats-App-2025-07-31-a-las-16-16-09-bbcf0581.jpg" alt="Wafle" class="slider-img active" />
-          <img src="https://i.ibb.co/HD5MMxW6/Imagen-de-Whats-App-2025-07-31-a-las-17-09-55-a8748f67.jpg" alt="Wafle 2" class="slider-img" />
-        </div>
-        <h4 class="fabric-name">Wafle</h4>
-        <p class="fabric-description">
-          Tela con textura acanalada en forma de cuadrícula, suave y confortable al tacto. Perfecta para prendas casuales, buzos, joggers y looks relajados con estilo.
-        </p>
-        <button class="contact-btn" data-name="Wafle">Consultar</button>
-      </article>
+     <!-- Wafle -->
+<article class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/4w6cq18g/Imagen-de-Whats-App-2025-07-31-a-las-16-16-09-bbcf0581.jpg" alt="Wafle" class="slider-img active" />
+    <img src="https://i.ibb.co/HD5MMxW6/Imagen-de-Whats-App-2025-07-31-a-las-17-09-55-a8748f67.jpg" alt="Wafle 2" class="slider-img" />
+    <img src="https://i.ibb.co/SX1xrYZx/Imagen-de-Whats-App-2025-08-28-a-las-16-33-14-ce23071d.jpg" alt="Wafle 3" class="slider-img" />
+  </div>
+  <h4 class="fabric-name">Wafle</h4>
+  <p class="fabric-description">
+    Tela con textura acanalada en forma de cuadrícula, suave y confortable al tacto. Perfecta para prendas casuales, buzos, joggers y looks relajados con estilo.
+  </p>
+  <button class="contact-btn" data-name="Wafle">Consultar</button>
+</article>
 
-     <!-- Lino Rayado -->
+
+ <!-- Lino Rayado --> 
 <article class="fabric-card">
   <div class="fabric-slider">
     <img src="https://i.ibb.co/MyDJXZhm/Imagen-de-Whats-App-2025-07-31-a-las-16-16-56-7421441d.jpg" alt="Lino Rayado" class="slider-img active" />
     <img src="https://i.ibb.co/5WJMVBnV/Imagen-de-Whats-App-2025-07-31-a-las-17-42-30-30329274.jpg" alt="Lino Rayado 2" class="slider-img" />
     <img src="https://i.ibb.co/bgGmGCb7/Imagen-de-Whats-App-2025-08-18-a-las-14-55-57-f62387a8.jpg" alt="Lino Rayado 3" class="slider-img" />
+    <img src="https://i.ibb.co/QvZqg47W/Imagen-de-Whats-App-2025-08-28-a-las-16-33-15-3c95919d.jpg" alt="Lino Rayado 4" class="slider-img" />
   </div>
   <h4 class="fabric-name">Lino Rayado</h4>
   <p class="fabric-description">
@@ -156,6 +161,7 @@
   </p>
   <button class="contact-btn" data-name="Lino Rayado">Consultar</button>
 </article>
+
 
 
       <!-- Cey -->
@@ -188,13 +194,13 @@
 <!-- Rústico -->
 <div class="fabric-card">
   <div class="fabric-slider">
-    <img src="https://i.ibb.co/5xkCN3W5/Imagen-de-Whats-App-2025-08-18-a-las-14-49-51-cdd62794.jpg" alt="Rustico" class="slider-img active" />
+    <img src="https://i.ibb.co/5xkCN3W5/Imagen-de-Whats-App-2025-08-18-a-las-14-49-51-cdd62794.jpg" alt="Rústico" class="slider-img active" />
   </div>
   <div class="fabric-name">Rustico</div>
   <div class="fabric-description">
     Tela resistente y con textura marcada, ideal para prendas informales, cómodas y con estilo natural.
   </div>
-  <a href="#" class="contact-btn" data-name="Rustico">Consultar</a>
+  <a href="#" class="contact-btn" data-name="Rústico">Consultar</a>
 </div>
 
 <!-- Morley KLM -->
@@ -213,6 +219,8 @@
 <div class="fabric-card">
   <div class="fabric-slider">
     <img src="https://i.ibb.co/B5zHDNZ2/Imagen-de-Whats-App-2025-08-18-a-las-14-55-05-0b0eeeeb.jpg" alt="Viscosa Airflow" class="slider-img active" />
+    <img src="https://i.ibb.co/tTYTqF6R/Imagen-de-Whats-App-2025-08-28-a-las-16-33-14-24eda4cd.jpg" alt="Viscosa Airflow 2" class="slider-img" />
+    <img src="https://i.ibb.co/r21F9MqK/Imagen-de-Whats-App-2025-08-28-a-las-16-33-14-6f210277.jpg" alt="Viscosa Airflow 3" class="slider-img" />
   </div>
   <div class="fabric-name">Viscosa Airflow</div>
   <div class="fabric-description">
@@ -220,6 +228,7 @@
   </div>
   <a href="#" class="contact-btn" data-name="Viscosa Airflow">Consultar</a>
 </div>
+
 
 <!-- Lino Cuadrille -->
 <div class="fabric-card">
@@ -269,6 +278,185 @@
   <a href="#" class="contact-btn" data-name="Twil Lolis">Consultar</a>
 </div>
 
+            <!-- Lumi Stripes -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/7x0TmbWG/Imagen-de-Whats-App-2025-08-28-a-las-16-33-11-80184ef6.jpg" alt="Lumi Stripes 1" class="slider-img active">
+  </div>
+  <div class="fabric-name">Lumi Stripes</div>
+  <div class="fabric-description">
+    Tela ligera con rayas sutiles, ideal para prendas elegantes y frescas.
+  </div>
+  <a href="#" class="contact-btn" data-name="Lumi Stripes">Consultar</a>
+</div>
+
+<!-- Rayel -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/4ZwwyPS3/Imagen-de-Whats-App-2025-08-28-a-las-16-33-12-01ab11a2.jpg" alt="Rayel 1" class="slider-img active">
+  </div>
+  <div class="fabric-name">Rayel</div>
+  <div class="fabric-description">
+    Tela con diseño clásico a rayas, perfecta para camisas y vestidos frescos.
+  </div>
+  <a href="#" class="contact-btn" data-name="Rayel">Consultar</a>
+</div>
+
+<!-- Cloud Stripe -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/Ndz1z7x9/Imagen-de-Whats-App-2025-08-28-a-las-16-33-12-c548e37b.jpg" alt="Cloud Stripe 1" class="slider-img active">
+  </div>
+  <div class="fabric-name">Cloud Stripe</div>
+  <div class="fabric-description">
+    Tela suave y delicada con rayas nubes, ideal para blusas y vestidos.
+  </div>
+  <a href="#" class="contact-btn" data-name="Cloud Stripe">Consultar</a>
+</div>
+
+<!-- Dobby Glow -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/bMC2ZC9h/Imagen-de-Whats-App-2025-08-28-a-las-16-33-13-a47dcf9f.jpg" alt="Dobby Glow 1" class="slider-img active">
+  </div>
+  <div class="fabric-name">Dobby Glow</div>
+  <div class="fabric-description">
+    Tela con textura especial y brillo sutil, perfecta para prendas sofisticadas.
+  </div>
+  <a href="#" class="contact-btn" data-name="Dobby Glow">Consultar</a>
+</div>
+
+<!-- Cey con Glitter -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/fGtZXxZL/Imagen-de-Whats-App-2025-08-28-a-las-16-33-13-6c1736be.jpg" alt="Cey con Glitter 1" class="slider-img active">
+  </div>
+  <div class="fabric-name">Cey con Glitter</div>
+  <div class="fabric-description">
+    Tela ligera con destellos brillantes, ideal para detalles y prendas elegantes.
+  </div>
+  <a href="#" class="contact-btn" data-name="Cey con Glitter">Consultar</a>
+</div>
+
+<!-- Cey Bordado -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/qHk66YY/Imagen-de-Whats-App-2025-08-28-a-las-16-33-13-050558c0.jpg" alt="Cey Bordado 1" class="slider-img active">
+  </div>
+  <div class="fabric-name">Cey Bordado</div>
+  <div class="fabric-description">
+    Tela con bordados delicados, ideal para prendas con detalle artesanal.
+  </div>
+  <a href="#" class="contact-btn" data-name="Cey Bordado">Consultar</a>
+</div>
+
+<!-- Baby Cotton -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/93n6pgWn/Imagen-de-Whats-App-2025-08-28-a-las-16-33-15-93842699.jpg" alt="Baby Cotton 1" class="slider-img active">
+  </div>
+  <div class="fabric-name">Baby Cotton</div>
+  <div class="fabric-description">
+    Algodón suave y delicado, perfecto para ropa de bebé y prendas sensibles al tacto.
+  </div>
+  <a href="#" class="contact-btn" data-name="Baby Cotton">Consultar</a>
+</div>
+
+<!-- Lino Rayón con Lycra -->
+<div class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/YMkXymj/Imagen-de-Whats-App-2025-08-28-a-las-16-33-16-54583030.jpg" alt="Lino Rayón con Lycra 1" class="slider-img active">
+  </div>
+  <div class="fabric-name">Lino Rayón con Lycra</div>
+  <div class="fabric-description">
+    Tela elástica y fresca, ideal para prendas ajustadas y con buena caída.
+  </div>
+  <a href="#" class="contact-btn" data-name="Lino Rayón con Lycra">Consultar</a>
+</div>
+
+      <!-- Red -->
+<article class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/b5WVhgpg/Imagen-de-Whats-App-2025-08-28-a-las-16-33-16-25d101bb.jpg" alt="Red" class="slider-img active" />
+  </div>
+  <h4 class="fabric-name">Red</h4>
+  <p class="fabric-description">
+    Tela suave y elegante, ideal para prendas de verano con caída ligera y color intenso.
+  </p>
+  <button class="contact-btn" data-name="Red">Consultar</button>
+</article>
+
+<!-- Bambula Vintage -->
+<article class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/yFj3KzBK/Imagen-de-Whats-App-2025-08-28-a-las-16-33-16-c419bec8.jpg" alt="Bambula Vintage" class="slider-img active" />
+  </div>
+  <h4 class="fabric-name">Bambula Vintage</h4>
+  <p class="fabric-description">
+    Tela ligera y delicada con un toque retro, perfecta para blusas y vestidos con estilo clásico.
+  </p>
+  <button class="contact-btn" data-name="Bambula Vintage">Consultar</button>
+</article>
+
+<!-- Silk Airflow -->
+<article class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/Kp2wSsv4/Imagen-de-Whats-App-2025-08-28-a-las-16-33-17-6197e125.jpg" alt="Silk Airflow" class="slider-img active" />
+  </div>
+  <h4 class="fabric-name">Silk Airflow</h4>
+  <p class="fabric-description">
+    Seda ligera y fluida, ideal para vestidos y blusas con caída elegante y movimiento natural.
+  </p>
+  <button class="contact-btn" data-name="Silk Airflow">Consultar</button>
+</article>
+
+<!-- Poplin con lycra -->
+<article class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/ychgn0Tk/Imagen-de-Whats-App-2025-08-28-a-las-16-33-17-f407f0b3.jpg" alt="Poplin con lycra" class="slider-img active" />
+  </div>
+  <h4 class="fabric-name">Poplin con lycra</h4>
+  <p class="fabric-description">
+    Popelina con elasticidad que proporciona comodidad y ajuste perfecto para camisas y pantalones.
+  </p>
+  <button class="contact-btn" data-name="Poplin con lycra">Consultar</button>
+</article>
+
+<!-- Waffle Rayado -->
+<article class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/JjJxcLfw/Imagen-de-Whats-App-2025-08-28-a-las-16-33-17-19e68885.jpg" alt="Waffle Rayado" class="slider-img active" />
+  </div>
+  <h4 class="fabric-name">Waffle Rayado</h4>
+  <p class="fabric-description">
+    Tela con textura tipo waffle y rayas, perfecta para buzos, joggers y prendas casuales con estilo.
+  </p>
+  <button class="contact-btn" data-name="Waffle Rayado">Consultar</button>
+</article>
+
+<!-- Morley Rayado -->
+<article class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/k24qDfs3/Imagen-de-Whats-App-2025-08-28-a-las-16-33-17-dc5922a4.jpg" alt="Morley Rayado" class="slider-img active" />
+  </div>
+  <h4 class="fabric-name">Morley Rayado</h4>
+  <p class="fabric-description">
+    Tela elástica tipo morley con rayas, ideal para prendas cómodas y modernas con un toque sofisticado.
+  </p>
+  <button class="contact-btn" data-name="Morley Rayado">Consultar</button>
+</article>
+
+<!-- Red Lurex -->
+<article class="fabric-card">
+  <div class="fabric-slider">
+    <img src="https://i.ibb.co/sdFMK9nj/Imagen-de-Whats-App-2025-08-28-a-las-16-33-18-752530a4.jpg" alt="Red Lurex" class="slider-img active" />
+  </div>
+  <h4 class="fabric-name">Red Lurex</h4>
+  <p class="fabric-description">
+    Tela brillante con hilo lurex, ideal para prendas de fiesta, blusas y detalles sofisticados.
+  </p>
+  <button class="contact-btn" data-name="Red Lurex">Consultar</button>
+</article>
       </div>
 
   <!-- Modal para ampliar imágenes -->
