--- a/index.html
+++ b/index.html
@@ -102,13 +102,12 @@
   </ul>
 </div>
 
-       <!-- Lino Sastrero -->
+<!-- Lino Sastrero -->
 <article class="fabric-card">
   <div class="fabric-slider">
-    <img src="https://i.ibb.co/TDyfbTRj/Imagen-de-Whats-App-2025-07-31-a-las-16-16-24-2e57004c.jpg" alt="Lino Sastrero" class="slider-img active" />
+    <img src="https://i.ibb.co/DH77cjcV/Imagen-de-Whats-App-2025-08-28-a-las-16-33-12-5004c258.jpg" alt="Lino Sastrero 4" class="slider-img active" />
     <img src="https://i.ibb.co/WvM7s4LG/file-0000000006d461fd8ba167a71358d1e9.png" alt="Lino Sastrero 2" class="slider-img" />
     <img src="https://i.ibb.co/prjy8ng5/file-0000000014f8622f88ede3c198f240fc.png" alt="Lino Sastrero 3" class="slider-img" />
-    <img src="https://i.ibb.co/DH77cjcV/Imagen-de-Whats-App-2025-08-28-a-las-16-33-12-5004c258.jpg" alt="Lino Sastrero 4" class="slider-img" />
   </div>
   <h4 class="fabric-name">Lino Sastrero</h4>
   <p class="fabric-description">
@@ -116,6 +115,7 @@
   </p>
   <button class="contact-btn" data-name="Lino Sastrero">Consultar</button>
 </article>
+
 
 
       <!-- Morley Suede -->
